<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_screen_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_lib">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="user_apreement">Пользовательское соглашение</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="support_email_address">polinagazarova@yandex.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="mail_to">mailto:</string>
    <string name="start_activity_support_title">Support</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="start_activity_share_title">Share</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="intent_type">text/plain</string>
    <string name="track_name">Название композиции</string>
    <string name="artist_name">Имя исполнителя</string>
    <string name="track_time">5:02</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="bad_connection">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history_message">Вы искали</string>
    <string name="track_image_content_description">Обложка трека</string>
    <string name="play_btn_content_description">Кнопка контроля воспроизведения</string>
    <string name="add_to_playlist_btn_content_desc">Кнопка добавления в плейлист</string>
    <string name="add_to_favorites_btn_content_desc">Кнопка добавления в избранное</string>
    <string name="duration_label">Длительность</string>
    <string name="collection_label">Альбом</string>
    <string name="release_date_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="track_playback_progress">00:00</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="media_lib_favorites_placeholder_text">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="media_lib_playlists_placeholder_text">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="mediaLibrary">Медиатека</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_created">Плейлист "%s" создан</string>
    <string name="playlist_image">"%s".jpg</string>
    <string name="playlists_storage_name">myalbums</string>
    <string name="playlist_confim_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_confim_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_confim_dialog_neutral_button_message">Отмена</string>
    <string name="playlist_confim_dialog_positive_button_message">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_image_content_description">Обложка альбома</string>
    <string name="playlist_share_btn_content_description">Поделиться плейлистом</string>
    <string name="playlist_more_actions_btn_content_description">Больше действий с плейлистом</string>
    <string name="track_ending_11_14">"%d" треков</string>
    <string name="track_ending_1">"%d" трек</string>
    <string name="track_ending_2_4">"%d" трека</string>
    <string name="track_ending_other">"%d" треков</string>
    <string name ="tracks_count_in_playlist_message">В этом плейлисте пока нет треков</string>
    <string name="delete_track">Удалить трек</string>
    <string name="confirm_delete">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_track_confirm_dialog_neutral_button_message">Отмена</string>
    <string name="delete_track_confirm_dialog_positive_button_message">Удалить</string>
    <string name="playlist_without_tracks_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_confirm_message">Хотите удалить плейлист \"%s"\"?</string>
    <string name="delete_playlist_confirm_dialog_neutral_button_message">Нет</string>
    <string name="delete_playlist_confirm_dialog_positive_button_message">Да</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
</resources>