<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/LayoutBackgroundWhiteStyle">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSearch"
        style="@style/ToolbarStyle"
        app:title="@string/search" />

    <FrameLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextSearch"
            style="@style/editTextSearchStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_search_layout_height"
            android:layout_marginHorizontal="@dimen/medium_margin" />

        <ImageView
            android:id="@+id/iconSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="@dimen/medium_layout_margin"
            android:src="@drawable/ic_search_grey"
            app:tint="@color/hint" />

        <ImageView
            android:id="@+id/iconClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/medium_layout_margin"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:tint="@color/hint" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ProgressBar
            android:id="@+id/searchProgressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <TextView
            android:id="@+id/searchHistoryMessage"
            style="@style/placeholderMessageStyle"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/search_history_message"
            android:gravity="center"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTracks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginTop="@dimen/medium_margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:visibility="gone"/>


        <Button
            android:id="@+id/btnClearHistory"
            style="@style/activitySearchBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"
            android:visibility="gone"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/placeholderMessage"
            style="@style/placeholderMessageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingHorizontal="@dimen/medium_padding"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_update"
            style="@style/activitySearchBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>