<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".mediaLibrary.ui.fragments.NewPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_dark_blue">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarNewPlaylistAndBackButton"
            style="@style/newPlaylistToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/new_playlist" />

        <ImageButton
            android:id="@+id/addImage"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="24dp"
            android:adjustViewBounds="true"
            android:background="@drawable/dash_rectangle"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarNewPlaylistAndBackButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNewPlaylistName"
            style="@style/newPlaylistHintStyle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:autofillHints="@string/new_playlist_name"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/new_playlist_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPlaylistName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutNewPlaylistDescription"
            style="@style/newPlaylistHintStyle"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/new_playlist_description"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/new_playlist_description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/textInputLayoutNewPlaylistName"
            app:layout_constraintStart_toStartOf="@id/textInputLayoutNewPlaylistName"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutNewPlaylistName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPlaylistDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/createNewPlaylistButton"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/create_new_playlist_button_selector"
            android:clickable="true"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNewPlaylistDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>