<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/track_layout_height"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/small_padding"
    android:paddingVertical="@dimen/smallest_padding">

    <ImageView
        android:id="@+id/trackImage"
        android:layout_width="@dimen/track_image_size"
        android:layout_height="@dimen/track_image_size"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackgroundBorderless" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="@dimen/medium_indent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/small_text_size"
            android:gravity="center_vertical"
            android:text="@string/track_name"
            android:textColor="@color/track_name"
            android:ellipsize="end"
            android:maxLines="1"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="@dimen/medium_indent"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="center_vertical"
                android:text="@string/artist_name"
                android:textColor="@color/artist_name"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/smallest_text_size" />

            <ImageView
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/ic_dot"
                android:layout_gravity="center"
                app:tint="@color/dot"/>

            <TextView
                android:id="@+id/trackTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="center_vertical"
                android:text="@string/track_time"
                android:textColor="@color/track_time"
                android:textSize="@dimen/smallest_text_size"
                tools:ignore="RtlHardcoded"
                android:maxLines="1"/>

        </LinearLayout>



    </LinearLayout>

    <ImageView
        android:id="@+id/trackImageRight"
        android:layout_width="@dimen/track_right_image_size"
        android:layout_height="@dimen/track_right_image_size"
        android:src="@drawable/ic_arrow_forward"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_gravity="center"
        app:tint="@color/track_right_image"/>
</LinearLayout>